# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-01-29 Daniel Leidert <daniel.leidert@wgdd.de>

	* html_docs/index.html: Improved markup.

2007-01-29 Daniel Leidert <daniel.leidert@wgdd.de>

	* html_docs/index.html: Added missing acronym/abbreviation tags.

2007-01-29 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in: Initially added (currently not
	activated) application/x-chemtool, application/x-ghemical,
	chemical/x-turbomole-basis, chemical/x-turbomole-control,
	chemical/x-turbomole-coord, chemical/x-turbomole-grad,
	chemical/x-turbomole-input, chemical/x-turbomole-jbas,
	chemical/x-turbomole-scfmo and chemical/x-turbomole-vibrational MIME
	types.
	(chemical/x-gaussian-input): Added more specific specification URL.
	(chemical/x-inchi, chemical/x-inchi-xml): Added specification URL.
	(chemical/x-inchi-xml): Added some magic.
	(chemical/x-pdb): Added specification URL and removed a useless one.
	(chemical/x-xyz): Added some specification URL with a short format
	explanation.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* TODO: Updated.

	* src/chemical-mime-database.xml.in (chemical/x-fasta): Added magic
	pattern and specification URL.
	(chemical/x-embl-dl-nucleotide): Added specification URL.
	(chemical/x-genbank): Fixed detection rules based on specification
	from www.psc.edu.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-daylight-smiles):
	Fixed specification URL.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* HACKING: Fixed typo.

	* html_docs/Makefile.am (install-sfnet): Fixed typo.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* Makefile.am:
	* html_docs/Makefile.am: Added a target install-sfnet to copy the
	files to sourceforge.net via scp.

	* freedesktop.org/Makefile.am (vpath, chemical-mime-data.xml):
	* gnome/Makefile.am (vpath, chemical-mime-data.keys)
	(chemical-mime-data.mime):